--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
