--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "emailjs-com": "^3.2.0",
+    "nodemailer": "^6.9.6",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
     "vue-material-design-icons": "^5.2.0",
